# trace-event-stats

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/trace_event_stats/: __init__.py  core.py
src/trace_event_stats.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_trace_event_stats.py
