[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-event-stats"
version = "0.1.0"
description = "Aggregate stats from agent JSONL trace events — tokens, cost, duration percentiles, by-kind filtering. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agents", "tracing", "llm", "observability", "stats"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/trace-event-stats"

[tool.setuptools.packages.find]
where = ["src"]
